test fully functional

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <title>CS290_HW#8</title>
   <link rel="stylesheet" href="style.css" type="text/css">
  </head>
- <body>
+ <body tabindex="0">
    <h3>Walter Johnson, CS290 HW Assignment#8: DOM &amp; Events</h3>
     <table>
         <caption>This is a 4 by 4 table (including the header) with self-referential content</caption>
